--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -22,3 +22,9 @@
 Il n'y a encore aucun article.
 {% endif %}
 {% endblock %}
+
+{% block body_javascripts %}
+<script>
+console.log('hello front index!');
+</script>
+{% endblock %}
