--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -11,7 +11,7 @@
 <ul>
     {% for article in articles %}
     <li>
-        <a href="">{{ article.title }}</a>
+        <a href="{{ path('app_front_article', {'id': article.id }) }}">{{ article.title }}</a>
         {% if article.writer %}
             (auteur : {{ article.writer.user.email }})
         {% endif %}
